Added general style and template for the header and footer

--- a/frontend/src/app/components/pages/index-page/index-page.component.html
+++ b/frontend/src/app/components/pages/index-page/index-page.component.html
@@ -1,2 +1,4 @@
 
-This page should be the landing page for the application, this is where we will have the introduction video
+<app-header-footer-template>
+	This is the index of the application
+</app-header-footer-template>
