--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,1 +1,34 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap');
+
+:root {
+	/* Colours */
+	--col-link: #3276E3;
+	
+	/* Fonts */
+	--text-font: 'Noto sans';
+
+	/* Font sizes */
+	--text-regular: 14px;
+	--text-small: 10px;
+	--text-mini: 8px;
+
+	/* Spacings */
+	--spacing-medium: 8px;
+	--spacing-small: 4px;
+}
+
+body {
+	font-family: var(--text-font), sans-serif;
+	font-size: var(--text-regular);
+	margin: 0px;
+}
+
+a {
+	text-decoration: none;
+}
+
+a, a:hover, a:visited {
+	color: var(--col-link);
+}
