Added rough content for each of the pages

--- a/frontend/src/app/components/pages/book-search-page/book-search-page.component.html
+++ b/frontend/src/app/components/pages/book-search-page/book-search-page.component.html
@@ -1,2 +1,4 @@
 
-This page should allow us to search for books (based on the title)
+<app-header-footer-template>
+	This page should allow us to search for books (based on the title)
+</app-header-footer-template>
