--- a/frontend/src/app/components/pages/organisation-details-page/organisation-details-page.component.html
+++ b/frontend/src/app/components/pages/organisation-details-page/organisation-details-page.component.html
@@ -1,1 +1,4 @@
-<p>organisation-details-page works!</p>
+
+<app-header-footer-template>
+	This page should allow us to see the details for organisation "{{org_id}}"
+</app-header-footer-template>
