--- a/frontend/src/app/components/pages/book-details-page/book-details-page.component.html
+++ b/frontend/src/app/components/pages/book-details-page/book-details-page.component.html
@@ -1,2 +1,4 @@
 
-This page should allow us to see the details of the book with id "{{book_id}}"
+<app-header-footer-template>
+	This page should allow us to see the details of the book with id "{{book_id}}"
+</app-header-footer-template>
