--- a/frontend/src/app/components/pages/organisation-members-page/organisation-members-page.component.html
+++ b/frontend/src/app/components/pages/organisation-members-page/organisation-members-page.component.html
@@ -1,1 +1,4 @@
-<p>organisation-members-page works!</p>
+
+<app-header-footer-template>
+	This page should allow us to see users in organisation "{{org_id}}"
+</app-header-footer-template>
