--- a/frontend/src/app/components/pages/organisation-search-page/organisation-search-page.component.html
+++ b/frontend/src/app/components/pages/organisation-search-page/organisation-search-page.component.html
@@ -1,2 +1,4 @@
 
-This page should allow us to browse organisations
+<app-header-footer-template>
+	This page should allow us to browse organisations
+</app-header-footer-template>
