--- a/frontend/src/app/components/pages/user-edit-page/user-edit-page.component.html
+++ b/frontend/src/app/components/pages/user-edit-page/user-edit-page.component.html
@@ -1,1 +1,5 @@
-<p>user-edit-page works!</p>
+
+<app-header-footer-template>
+	This page should allow us to edit user "{{user_id}}"
+</app-header-footer-template>
+
