I have achieved comedy (finished index page => close #1)

--- a/frontend/src/app/components/pages/index-page/index-page.component.html
+++ b/frontend/src/app/components/pages/index-page/index-page.component.html
@@ -1,4 +1,11 @@
 
 <app-header-footer-template>
-	This is the index of the application
+	<div class="canvas">
+		<h1>Welcome to BookShare</h1>
+		<p>Here you can join organisations and share books with your friends or people living close to you.</p>
+		<p>Not sure where to start ? Check out this quick tutorial !</p>
+		<video controls preload="none" poster="/assets/tutorial/cover.png">
+			<source src="/assets/tutorial/video.webm" type="video/webm" />
+		</video>
+	</div>
 </app-header-footer-template>
