--- a/frontend/src/app/components/pages/signin-page/signin-page.component.html
+++ b/frontend/src/app/components/pages/signin-page/signin-page.component.html
@@ -1,1 +1,33 @@
-<p>signin-page works!</p>
+<div id="center">
+
+	<h1>Sign in to BookShare</h1>
+
+	<form id="grid-form">
+		<span class="p-input-icon-left p-float-label">
+			<i class="pi pi-user"></i>
+			<input pInputText id="username-input" type="text" name="username" class="p-inputtext-sm" [(ngModel)]="username" (focusout)="checkUsername()" [ngClass]="{'ng-invalid ng-dirty': username_dirty}">
+			<label for="username-input">Username</label>
+		</span>
+
+		<span class="p-input-icon-left p-float-label">
+			<i class="pi pi-at"></i>
+			<input pInputText id="email-input" type="text" name="email" class="p-inputtext-sm" [(ngModel)]="email" (focusout)="checkEmail()" [ngClass]="{'ng-invalid ng-dirty': email_dirty}">
+			<label for="email-input">Email address</label>
+		</span>
+
+		<span class="p-float-label">
+			<input pInputText id="password-input" type="password" name="password" class="p-inputtext-sm" [(ngModel)]="password" (focusout)="checkPassword()" [ngClass]="{'ng-invalid ng-dirty': password_dirty}">
+			<label for="password-input">Password</label>
+		</span>
+
+		<span class="p-float-label">
+			<input pInputText id="confirm-input" type="password" name="confirm" class="p-inputtext-sm" [(ngModel)]="confirm_password" (ngModelChange)="peekConfirm()" (focusout)="checkConfirm()" [ngClass]="{'ng-invalid ng-dirty': confirm_dirty}">
+			<label for="confirm-input">Confirm password</label>
+		</span>
+
+		<p-button label="Submit" [disabled]="!this.ok" (onClick)="onSigninButton()"></p-button>
+	</form>
+
+	<p class="footnote">Already have an account ? <a class="menuitem" [routerLink]="['/login']">Log in</a></p>
+	
+</div>
