--- a/frontend/src/app/components/pages/signin-page/signin-page.component.css
+++ b/frontend/src/app/components/pages/signin-page/signin-page.component.css
@@ -45,8 +45,12 @@
 	grid-area: 3 / 1 / 3 / 3;
 }
 
-input {
+input, div.p-inputgroup {
 	width: 210px;
+}
+
+div.p-inputgroup > button {
+	background-color: white;
 }
 
 p.footnote {
