--- a/frontend/src/app/components/pages/signin-page/signin-page.component.html
+++ b/frontend/src/app/components/pages/signin-page/signin-page.component.html
@@ -31,6 +31,6 @@
 		<p-button label="Submit" [disabled]="!this.ok" (onClick)="onSigninButton()"></p-button>
 	</form>
 
-	<p class="footnote">Already have an account ? <a class="menuitem" [routerLink]="['/login']">Log in</a></p>
+	<p class="footnote">Already have an account ? <a class="menuitem" [routerLink]="['/login']" [queryParams]="{next: nextPath}">Log in</a></p>
 	
 </div>
