--- a/frontend/src/app/components/pages/login-page/login-page.component.html
+++ b/frontend/src/app/components/pages/login-page/login-page.component.html
@@ -1,1 +1,24 @@
-<p>login-page works!</p>
+
+<div id="center">
+
+	<h1>Log in to BookShare</h1>
+	
+	<form id="flex-form">
+		<span class="p-input-icon-left p-float-label">
+			<i class="pi pi-at"></i>
+			<input pInputText id="email-input" type="text" name="email" class="p-inputtext-sm" [(ngModel)]="email" (focusout)="checkEmail()" [ngClass]="{'ng-invalid ng-dirty': email_dirty}">
+			<label for="email-input">Email address</label>
+		</span>
+
+		<span class="p-input-icon-left p-float-label">
+			<i class="pi pi-lock"></i>
+			<input pInputText id="password-input" type="password" name="password" class="p-inputtext-sm" [(ngModel)]="password" (ngModelChange)="peekPassword()" (focusout)="checkPassword()" [ngClass]="{'ng-invalid ng-dirty': password_dirty}">
+			<label for="password-input">Password</label>
+		</span>
+		
+		<p-button label="Login" [disabled]="!this.ok" (onClick)="onLoginButton()"></p-button>
+	</form>
+
+	<p class="footnote">Don't have an account yet ? <a class="menuitem" [routerLink]="['/signin']" [queryParams]="{next: nextPath}">Sign in</a></p>
+
+</div>
