Mutualised the code for the next path in the template

--- a/frontend/src/app/components/pages/login-page/login-page.component.html
+++ b/frontend/src/app/components/pages/login-page/login-page.component.html
@@ -1,5 +1,5 @@
 
-<app-simple-dialog-template [title]="'Log in to BookShare'">
+<app-simple-dialog-template [title]="'Log in to BookShare'" [(nextPath)]="nextPath">
 	
 	<form id="flex-form">
 		<span class="p-input-icon-left p-float-label">
