--- a/frontend/src/app/components/pages/signin-page/signin-page.component.html
+++ b/frontend/src/app/components/pages/signin-page/signin-page.component.html
@@ -1,4 +1,4 @@
-<app-simple-dialog-template [title]="'Sign in to BookShare'">
+<app-simple-dialog-template [title]="'Sign in to BookShare'" [(nextPath)]="nextPath">
 
 	<form id="grid-form">
 		<span class="p-input-icon-left p-float-label">
