Fixed styles, changed default cover to a diagram

--- a/frontend/src/app/components/pages/book-search-page/book-search-page.component.css
+++ b/frontend/src/app/components/pages/book-search-page/book-search-page.component.css
@@ -4,9 +4,9 @@
 }
 
 #books {
-	margin-top: var(--spacing-medium);
+	margin-top: var(--spacing-large);
 	display: grid;
 	grid-gap: var(--spacing-medium);
-	grid-template-columns: repeat(auto-fill, 190px);
-	grid-template-rows:    repeat(auto-fill, 280px);
+	grid-template-columns: repeat(5,          190px);
+	grid-template-rows:    repeat(auto-fill , 280px);
 }
