--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -5,6 +5,8 @@
 :root {
 	/* Colours */
 	--col-primary: #18ab55;
+	--col-primary-light: #4fe88e;
+	--col-tertiary-light: #4fa1e8;
 	--col-canvas: #f7f7f7;
 	--col-bg: #d0d0d0;
 	--col-border: #aeaeae;
