--- a/frontend/src/app/components/generic/cards/book-card/book-card.component.css
+++ b/frontend/src/app/components/generic/cards/book-card/book-card.component.css
@@ -11,6 +11,7 @@
 	background-repeat: no-repeat;
 	background-size: cover;
 	flex-grow: 1;
+	background-color: var(--col-primary);
 }
 
 .book-title {
