--- a/frontend/src/app/components/templates/header-footer-template/header-footer-template.component.css
+++ b/frontend/src/app/components/templates/header-footer-template/header-footer-template.component.css
@@ -10,7 +10,7 @@
 	flex-flow: column nowrap;
 	flex-grow: 1;
 	align-items: center;
-	padding: 20px;
+	padding: var(--spacing-large);
 }
 
 #app-title {
