Beginning of the book detail page

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -11,6 +11,7 @@
 	--col-bg: #d0d0d0;
 	--col-border: #aeaeae;
 	--col-text: #101010;
+	--col-text-light: #535c54;
 	--col-link: #3276E3;
 	
 	/* Fonts */
