--- a/frontend/src/app/components/pages/book-details-page/book-details-page.component.html
+++ b/frontend/src/app/components/pages/book-details-page/book-details-page.component.html
@@ -1,4 +1,18 @@
 
 <app-header-footer-template>
-	This page should allow us to see the details of the book with id "{{book_id}}"
+	<div id="page-grid">
+		<div class="canvas">
+			<a class="image-link" [style.background-image]="cover_path"></a>
+			<p *ngIf="this.book.iban !== null" id="isbn">ISBN {{this.book.iban}}</p>
+		</div>
+
+		<div class="canvas">
+			<h1>{{book.name}}</h1>
+			<h2>{{book.author}}</h2>
+			<p-fieldset *ngIf="this.book.desc" [toggleable]="true" [collapsed]="true" style="text-align: justify;">
+				<ng-template pTemplate="header">Summary</ng-template>
+				{{this.book.desc}}
+			</p-fieldset>			
+		</div>
+	</div>
 </app-header-footer-template>
