--- a/frontend/src/app/components/pages/book-search-page/book-search-page.component.css
+++ b/frontend/src/app/components/pages/book-search-page/book-search-page.component.css
@@ -10,3 +10,7 @@
 	grid-template-columns: repeat(5,          190px);
 	grid-template-rows:    repeat(auto-fill , 280px);
 }
+
+#books > app-book-card {
+	height: 280px;
+}
