--- a/frontend/src/app/components/templates/header-footer-template/header-footer-template.component.html
+++ b/frontend/src/app/components/templates/header-footer-template/header-footer-template.component.html
@@ -3,11 +3,19 @@
 	<header>
 		<a id="app-title" [routerLink]="['/index']">BookShare</a> 
 		<a class="menuitem" [routerLink]="['/books']">Books</a>
-		<a class="menuitem" [routerLink]="['/organisations']">Organisations</a>
-		<ng-template [ngIf]="userService.isConnected()" [ngIfElse]="elseBlock">
-			<a class="menuitem" *ngIf="userService.isAdmin()" [routerLink]="['/users']">All users</a>
-			<a class="menuitem" [routerLink]="['/user/'+userService.getUuid()]">My profile ({{userService.getUsername()}})</a>
-			<span class="menuitem" (click)=userService.logout()>Log out</span>
+		<span class="menuitem">
+			<a [routerLink]="['/organisations']">Organisations</a>
+			<div class="submenu" *ngIf="organisations.length > 0">
+				<div class="submenu-arrow"></div>
+				<div class="canvas">
+					<a *ngFor="let org of organisations" [routerLink]="['/organisation/'+org.id]">{{org.name}}</a>
+				</div>
+			</div>
+		</span>
+		<ng-template [ngIf]="connected" [ngIfElse]="elseBlock">
+			<a class="menuitem" *ngIf="admin" [routerLink]="['/users']">All users</a>
+			<a class="menuitem" [routerLink]="['/user/'+uuid]">My profile ({{username}})</a>
+			<span class="menuitem" (click)=logout()>Log out</span>
 		</ng-template>
 		<ng-template #elseBlock>
 			<a class="menuitem" [routerLink]="['/login']">Log in</a>
