Added detection of the URL parameter for the organisation

--- a/frontend/src/app/components/pages/book-details-page/book-details-page.component.html
+++ b/frontend/src/app/components/pages/book-details-page/book-details-page.component.html
@@ -12,7 +12,8 @@
 			<p-fieldset *ngIf="this.book.desc" [toggleable]="true" [collapsed]="true" style="text-align: justify;">
 				<ng-template pTemplate="header">Summary</ng-template>
 				{{this.book.desc}}
-			</p-fieldset>			
+			</p-fieldset>
+			<p *ngIf="org_id !== null">TODO : get info for org {{org_id}}</p>
 		</div>
 	</div>
 </app-header-footer-template>
