--- a/frontend/src/app/components/pages/book-details-page/book-details-page.component.css
+++ b/frontend/src/app/components/pages/book-details-page/book-details-page.component.css
@@ -17,6 +17,17 @@
 	border-radius: 3px;
 }
 
+#page-grid > .canvas:nth-child(2) {
+	position: relative;
+}
+
+#page-grid > .canvas:nth-child(2) > i {
+	position: absolute;
+	top: var(--spacing-large);
+	right: var(--spacing-large);
+	font-size: 1.5rem;
+}
+
 h1 {
 	margin-bottom: 0px;
 }
