Fixed user list columns names

--- a/frontend/src/app/components/pages/user-list-page/user-list-page.component.html
+++ b/frontend/src/app/components/pages/user-list-page/user-list-page.component.html
@@ -5,8 +5,8 @@
 			<ng-template pTemplate="header">
 				<tr style="position: sticky;">
 					<th>Username</th>
-					<th>Name</th>
-					<th>Category</th>
+					<th>Role</th>
+					<th>Access</th>
 				</tr>
 			</ng-template>
 			<ng-template pTemplate="body" let-user>
