--- a/frontend/src/app/components/pages/organisation-members-page/organisation-members-page.component.html
+++ b/frontend/src/app/components/pages/organisation-members-page/organisation-members-page.component.html
@@ -10,7 +10,7 @@
 				</tr>
 			</ng-template>
 			<ng-template pTemplate="body" let-member>
-				<tr org-members-page-row [member]="member" [admin]="admin" [owner]="owner"></tr>
+				<tr org-members-page-row [member]="member" [org_id]="org_id" [admin]="admin" [owner]="owner"></tr>
 			</ng-template>
 		</p-table>
 	</div>
