Fixec a few misuses of `routerLink`

--- a/frontend/src/app/components/pages/user-list-page/specific/user-list-page-row/user-list-page-row.component.html
+++ b/frontend/src/app/components/pages/user-list-page/specific/user-list-page-row/user-list-page-row.component.html
@@ -1,7 +1,7 @@
 
 <td>
 	{{username}}
-	<a [routerLink]="user_link">
+	<a [routerLink]="['/user/', user.id]">
 		<i class="pi pi-link"></i>
 	</a>
 </td>
