Implemented password change and account deletion

--- a/frontend/src/app/components/pages/user-edit-page/user-edit-page.component.css
+++ b/frontend/src/app/components/pages/user-edit-page/user-edit-page.component.css
@@ -47,3 +47,8 @@ h1 > i {
 	justify-content: center;
 	margin-top: var(--spacing-normal);
 }
+
+
+p-dialog .hbox {
+	margin-top: var(--spacing-large);
+}
