Responsiveness test on the book search page

--- a/frontend/src/app/components/pages/book-search-page/book-search-page.component.css
+++ b/frontend/src/app/components/pages/book-search-page/book-search-page.component.css
@@ -14,3 +14,16 @@
 #books > app-book-card {
 	height: 280px;
 }
+
+
+@media (max-width: 990px) {
+	#books {
+		grid-template-columns: repeat(4, 190px);
+	}
+}
+
+@media (max-width: 790px) {
+	#books {
+		grid-template-columns: repeat(3, 190px);
+	}
+}
