Added responsiveness for almost all the pages

--- a/frontend/src/app/components/pages/index-page/index-page.component.css
+++ b/frontend/src/app/components/pages/index-page/index-page.component.css
@@ -14,3 +14,14 @@ video {
 	margin-top: var(--spacing-medium);
 	border: var(--col-border) solid 1px;
 }
+
+
+@media (max-width: 805px) {
+	.canvas {
+		width: 700px;
+	}
+
+	video {
+		width: 650px;
+	}
+}
