--- a/frontend/src/app/components/pages/user-details-page/user-details-page.component.html
+++ b/frontend/src/app/components/pages/user-details-page/user-details-page.component.html
@@ -1,6 +1,6 @@
 
 <app-header-footer-template>
-	<div class="canvas" id="orgs-container">
+	<div class="canvas content-width" id="orgs-container">
 		<a [routerLink]="['/user/', user_id, 'edit']"><i *ngIf="logged_in" class="pi pi-user-edit"></i></a>
 		<h1>
 			<i *ngIf="admin" class="pi pi-star-fill"></i>
