--- a/frontend/src/app/components/pages/user-list-page/user-list-page.component.html
+++ b/frontend/src/app/components/pages/user-list-page/user-list-page.component.html
@@ -1,7 +1,7 @@
 
 <app-header-footer-template>
-	<div class="canvas">
-		<p-table [value]="users" [tableStyle]="{'min-width': '900px'}">
+	<div class="canvas content-width">
+		<p-table [value]="users" [tableStyle]="{'width': '100%'}">
 			<ng-template pTemplate="header">
 				<tr style="position: sticky;">
 					<th>Username</th>
