--- a/frontend/src/app/components/pages/organisation-details-page/organisation-details-page.component.html
+++ b/frontend/src/app/components/pages/organisation-details-page/organisation-details-page.component.html
@@ -1,7 +1,7 @@
 
 <app-header-footer-template>
 	
-	<div class="canvas">
+	<div class="canvas content-width">
 		<a [routerLink]="['/organisation/', org_id, 'members']" *ngIf="joined || is_admin"><i class="pi pi-users"></i></a>
 		<h1>{{name}}</h1>
 		<p *ngIf="description !== null">
