Actually it's called an IBAN

--- a/frontend/src/app/components/pages/book-details-page/book-details-page.component.html
+++ b/frontend/src/app/components/pages/book-details-page/book-details-page.component.html
@@ -3,7 +3,7 @@
 	<div id="page-grid">
 		<div class="canvas">
 			<a class="image-link" [style.background-image]="cover_path"></a>
-			<p *ngIf="this.book.iban !== null" id="isbn">ISBN {{this.book.iban}}</p>
+			<p *ngIf="this.book.iban !== null" id="isbn">IBAN {{this.book.iban}}</p>
 		</div>
 
 		<div class="canvas">
